src/objects/Apttus_Billing__ForecastedBillingSummary__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Billing__BillToAccountId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the corresponding Bill To Account</description>
        <inlineHelpText>Id of the corresponding Bill To Account</inlineHelpText>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasted Billing Summaries</relationshipLabel>
        <relationshipName>ForecastedBillingSummaries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ConfigurationId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the corresponding Product Configuration</description>
        <inlineHelpText>Id of the corresponding Product Configuration</inlineHelpText>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Forecasted Billing Summaries</relationshipLabel>
        <relationshipName>ForecastedBillingSummaries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__DueDate__c</fullName>
        <description>The date payment is due</description>
        <inlineHelpText>The date payment is due</inlineHelpText>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceDate__c</fullName>
        <description>The Ready for Invoice Date of the contributing Billing Schedules</description>
        <inlineHelpText>The Ready for Invoice Date of the contributing Billing Schedules</inlineHelpText>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Payment Term used to compute the Due Date</description>
        <inlineHelpText>Id of the Payment Term used to compute the Due Date</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Forecasted Billing Summaries</relationshipLabel>
        <relationshipName>ForecastedBillingSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProposalId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the corresponding Quote/Proposal</description>
        <inlineHelpText>Id of the corresponding Quote/Proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Forecasted Billing Summaries</relationshipLabel>
        <relationshipName>ForecastedBillingSummaries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalInvoiceAmount__c</fullName>
        <description>The Invoice due amount</description>
        <inlineHelpText>The Invoice due amount</inlineHelpText>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalOneTimeFeeAmount__c</fullName>
        <description>The sum of all One Time fees</description>
        <inlineHelpText>The sum of all One Time fees</inlineHelpText>
        <label>Total One Time Fee Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalRecurringFeeAmount__c</fullName>
        <description>The sum of all Recurring fees</description>
        <inlineHelpText>The sum of all Recurring fees</inlineHelpText>
        <label>Total Recurring Fee Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalUsageFeeAmount__c</fullName>
        <description>The sum of all Usage fees</description>
        <inlineHelpText>The sum of all Usage fees</inlineHelpText>
        <label>Total Usage Fee Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Forecasted Billing Summary</label>
    <nameField>
        <displayFormat>BSUM-{00000000}</displayFormat>
        <label>Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasted Billing Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>